<resources>
    <string name="app_name">Pilot</string>
    <string name="handshake">Handshake</string>
    <string name="send_message_to_websocket">Send Message to Websocket</string>
    <string name="pilot">Pilot</string>
    <string name="Close_Connection">close_websocket_connection</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">bluetooth</string>
    <string name="WebSocket">websocket</string>
    <string name="menu">Menu</string>
    <string name="blueto" />
    <string name="test" />
    <string name="select_hostname">Select Hostname</string>
    <string name="scan">Scan</string>
    <string name="reopen_socketconnection">reopen SocketConnection</string>
    <string-array name="uri">
        <item>wss://pren.garteroboter.li:443/ws/</item>
        <item>ws://192.168.188.38:8000/ws/</item>
    </string-array>
    <string name="devices">Bluetooth Devices (scroll down) </string>
    <string name="title_activity_simple_uiactivity">simpleUIActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <string-array name="model_array">
        <item>m</item>
        <item>m-416</item>
        <item>g</item>
        <item>ELite0_320</item>
        <item>ELite1_416</item>
        <item>ELite2_512</item>
        <item>RepVGG-A0_416</item>
    </string-array>
    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string name="set_camera_reader_resolution">Resolution of ImageReader</string>
    <string name="default_resolution_value">Default is 640x480</string>
    <string name="camera_resolution_title">Change ImageReader Resolution</string>
    <string name="key_camera_reader_resolution">key_camera_reader_resolution</string>


    <string name="key_bluetooth">key_bluetooth</string>
    <string name="disable_for_testing_without_esp">Disable for testing without ESP</string>
    <string name="send_bluetooth_commands">Send Bluetooth Commands</string>

    <string name="key_show_an_approximation_of_fps">draw_fps</string>
    <string name="show_an_approximation_of_fps">Show an approximation of FPS</string>
    <string name="show_fps">Show FPS</string>

    <string name="key_prob_threshold">key_prob_threshold</string>
    <string name="change_probability_for_plant_dialog_title">You can set the probability threshold for plant object detection.  </string>
    <string name="title_prob_threshold">Probability threshold for halting</string>
    <string name="summary_for_prob_threshold">Sensible default is 0.4.</string>

    <string-array name="threshold_probability_entries">
        <item>0.40</item>
        <item>0.45</item>
        <item>0.50</item>
        <item>0.55</item>
        <item>0.60</item>
        <item>0.65</item>
        <item>0.70</item>
        <item>0.75</item>
        <item>0.80</item>
    </string-array>

    <string-array name="threshold_probability_values">
        <item>0.40</item>
        <item>0.45</item>
        <item>0.50</item>
        <item>0.55</item>
        <item>0.60</item>
        <item>0.65</item>
        <item>0.70</item>
        <item>0.75</item>
        <item>0.80</item>
    </string-array>

    <string-array name="confirmations_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="confirmations_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>





    <string-array name="camera_resolution_entries">
        <item>width: 640 height: 480 (default)</item>
        <item>width: 480 height: 320</item>
        <item>width: 480 height: 360</item>
        <item>width: 320 height: 240</item>
    </string-array>


    <string-array name="camera_resolution_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="time_limit_pref">test</string>


</resources>