<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_draw_qr_code"
            android:summary="@string/might_impact_performance"
            android:title="@string/draw_bounding_box" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_show_an_approximation_of_fps"
            android:summary="@string/show_an_approximation_of_fps"
            android:title="@string/show_fps" />


        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/set_camera_reader_resolution"
            android:entries="@array/camera_resolution_entries"
            android:entryValues="@array/camera_resolution_values"
            android:key="@string/key_camera_reader_resolution"
            android:summary="@string/default_resolution_value"
            android:title="@string/camera_resolution_title" />


    </PreferenceCategory>

</PreferenceScreen>